--- a/geo-have/src/assets/base.css
+++ b/geo-have/src/assets/base.css
@@ -2,7 +2,11 @@
   --soft-gray: #f1f1f1;
 
   --btn-soft-green: #87a669;
-  ---btn-soft-red: #cc807d;
+  --btn-soft-red: #cc807d;
+  --btn-on-click-green: #647B4D;
+  --btn-on-click-grey: #c7c7c7;
+  --btn-on-click-yellow: #daC572;
+
 
   --muted-orange: #e8a667;
   --muted-brown: #9a795f;
