--- a/geo-have/src/assets/base.css
+++ b/geo-have/src/assets/base.css
@@ -3,10 +3,9 @@
 
   --btn-soft-green: #87a669;
   --btn-soft-red: #cc807d;
-  --btn-on-click-green: #647B4D;
+  --btn-on-click-green: #647b4d;
   --btn-on-click-grey: #c7c7c7;
-  --btn-on-click-yellow: #daC572;
-
+  --btn-on-click-yellow: #dac572;
 
   --muted-orange: #e8a667;
   --muted-brown: #9a795f;
@@ -44,9 +43,7 @@ body {
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "OpenSans", sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
