--- a/geo-have/src/assets/main.css
+++ b/geo-have/src/assets/main.css
@@ -1,9 +1,11 @@
 @import "./base.css";
 
+
 body {
   display: flex;
   flex-direction: column;
   background-color: var(--background-color);
+
 }
 #app {
   display: flex;
@@ -19,5 +21,26 @@ a,
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
-  padding: 3px;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 14px; 
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+  body {
+    font-size: 16px; 
+  }
+}
+
+
+
+/* Media query for large screens */
+@media only screen and (min-width: 1025px) {
+  body {
+    font-size: 18px; 
+  }
+
 }
